<resources>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="previous" translatable="false">Previous</string>

    <!--蓝牙相关字符串资源-->
    <string name="app_name">Multimedia Launcher</string>
    <string name="bt_music_name">Bluetooth music</string>
    <string name="favorite">Favorite</string>
    <string name="book">Contacts</string>
    <string name="setting">Settings</string>
    <string name="call_log">CallLog</string>
    <string name="dial">Dial</string>
    <string name="transform">Transfer</string>
    <string name="mute">Mute</string>
    <string name="hung">Hang up</string>
    <string name="pickup">Pick up</string>
    <string name="search">Search</string>
    <string name="disconnect">Bluetooth is disconnected, please connect</string>
    <string name="connect">Connect</string>
    <string name="book_tip">Contacts refreshing…</string>
    <string name="log_tip">Calllog refreshing…</string>
    <string name="favorite_tip">Without favorite record</string>
    <string name="cancel">Cancel</string>
    <string name="no_result">Without search result</string>
    <string name="ring">Incoming call …</string>
    <string name="dialing">Dialing …</string>
    <string name="delete_favorite">Delete %1$s successfully</string>
    <string name="car_bt_str1">the day before yesterday</string>
    <string name="car_bt_str2">Yesterday</string>
    <string name="local_device">My equipment</string>
    <string name="device_name">Bluetooth name</string>
    <string name="device_version">Bluetooth version</string>
    <string name="device_pin">PIN code</string>
    <string name="device_input_pin">please enter the PIN code</string>
    <string name="device_input_name">Please enter the Bluetooth name</string>
    <string name="device_paired">Paired equipment</string>
    <string name="device_search">Search for new devices</string>
    <string name="device_pair_null">Not connected</string>
    <string name="device_null">no equipment</string>
    <string name="discoverable">Bluetooth switch </string>
    <string name="auto_pick">automatic answering settings </string>
    <string name="connected">has been connected</string>
    <string name="ok"> OK</string>
    <string name="never_auto_pick">never answer </string>
    <string name="auto_pick_0">answer immediately</string>
    <string name="auto_pick_5">answer after 5s</string>
    <string name="auto_pick_10">answer after 10s</string>
    <string name="auto_pick_30">answer after 30s</string>
    <string name="cancel_save">delete</string>
    <string name="bt_connect_disconnect">disconnect </string>
    <string name="bt_str1">Click to return to the Bluetooth</string>
    <string name="bt_music">Bt Music</string>
    <string name="refresh">Refresh</string>

    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <string name="title_activity_video_playing" translatable="false">VideoPlaying</string>

    <string name="title_activity_radio">Radio</string>
    <string name="title_activity_audio">Music</string>
    <string name="title_activity_video" translatable="false">Video</string>
    <string name="title_activity_recorder" translatable="false">Recorder</string>
    <string name="title_activity_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_activity_eq" translatable="false">EQ</string>


    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

    <string name="tab_name_playing" translatable="false">Playing</string>
    <string name="tab_name_usb">USB</string>
    <string name="tab_name_sd">SD</string>
    <string name="tab_name_folder">Folder</string>
    <string name="message_no_media_data">No media track information was found</string>
    <string name="textview_default">........</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_fullscreen_main" translatable="false">FullscreenMainActivity</string>
    <string name="tv_timer_12_45">12:45</string>
    <string name="tv_date_tue_oct_7">Tue, Oct 7</string>
    <string name="tv_weather_24_c_sunny" translatable="false">24°C Sunny</string>
    <string name="tv_music">Music</string>
    <string name="image_description">TODO</string>
    <string name="tv_video" translatable="false">Video</string>
    <string name="video_app" translatable="false">Video App</string>
    <string name="tv_navigation">Navigation</string>
    <string name="cds_navigation" translatable="false">Navigation</string>
    <string name="tv_apps">Apps</string>
    <string name="cds_apps" translatable="false">Apps</string>
    <string name="tv_settings" translatable="false">Settings</string>
    <string name="cds_settings" translatable="false">Settings</string>
    <string name="tv_browser" translatable="false">Browser</string>
    <string name="cds_browser" translatable="false">Browser</string>
    <string name="cds_music">Music</string>
    <string name="cds_video_app" translatable="false">Video App</string>
    <string name="todo" translatable="false">TODO</string>
</resources>